--- a/templates/admin/form-widgets/paragraph_text.html.twig
+++ b/templates/admin/form-widgets/paragraph_text.html.twig
@@ -2,6 +2,7 @@
     <div class="form-group">
         {{ form_label(form.paragraph_text[counter]) }}
         {{ form_widget(form.paragraph_text[counter]) }}
+        {{ form_errors(form.paragraph_text[counter]) }}
     </div>
     <div class="invisible card card-body" id="js--text_paragraph_preview"></div>
 </div>
