--- a/templates/admin/form-widgets/text_leading.html.twig
+++ b/templates/admin/form-widgets/text_leading.html.twig
@@ -2,6 +2,7 @@
     <div class="form-group">
         {{ form_label(form.text_leading[counter]) }}
         {{ form_widget(form.text_leading[counter]) }}
+        {{ form_errors(form.text_leading[counter]) }}
     </div>
     <div class="invisible card card-body" id="js--text_leading_preview"></div>
 </div>
