--- a/templates/admin/form-widgets/panoramic_image.html.twig
+++ b/templates/admin/form-widgets/panoramic_image.html.twig
@@ -1,5 +1,5 @@
 <div class="panoramic_image" data-counter="{{ index }}">
-    {{ form_widget(template.panoramic_image[counter]) }}
+    {{ form_widget(form.panoramic_image[counter]) }}
     <small id="panoramic_image_helper" class="form-text text-muted">Best placed at the top of the page before any
         content.
     </small>
